[project]
name = "elasticache-monitor"
version = "1.0.0"
description = "ElastiCache hot shard debugger and monitoring tool"
authors = [
    {name = "Kutumb Infrastructure Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.0",
    "boto3>=1.28.0",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "pyyaml>=6.0",
]

[project.scripts]
elasticache-monitor = "elasticache_monitor.cli:auto_monitor"
elasticache-endpoints = "elasticache_monitor.cli:get_endpoints"
elasticache-analyze = "elasticache_monitor.cli:analyze_logs"
elasticache-schedule = "elasticache_monitor.cli:scheduled_monitor"
elasticache-query = "elasticache_monitor.cli:query_db"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src/elasticache_monitor"]

